--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css"/>
+    <link rel="stylesheet"href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css"/>
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css"/>
     <!-- here we added a link to link our css so we use template inheritance 
         like we did before in the previous video. We use url_for() again 
         but this time url_for is going to take 2 arguments.
@@ -16,34 +17,105 @@
     <title>Hello Flask</title>
   </head>
   <body>
-    <nav class="navbar">
-      <ul>
-        <li><a href="{{ url_for('index') }}">Home</a></li>
-        <!-- using Jinja templating method of url_for in order 
-            to call the appropriate functions. The format is as 
-            above double curly brackets opening and closing 
-        -->
-        <li><a href="{{ url_for('about') }}">About</a></li>
-        <!-- so what we do here is calling the url_for()
-            unction that looks up the view called 'index()'
-            or the view called 'about()' and then injects some text
-            which is the actual root.  The names have to correspond to 
-            the views, that means our index() view and our about()view. 
-        -->
-        <li><a href="{{ url_for('contact') }}">Contact</a></li>
-        <li><a href="{{ url_for('careers') }}">Careers</a></li>
-      </ul>
-      <!-- the double curly brackets contain 
-        an expression which output something  
-        onto the screen, or in this case into our href. -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Thorin &amp; Company</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('about') }}">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('careers') }}">Careers</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    {% block content %} {% endblock %}
-    <!-- what we are doing here is defining a block or an 
-        area that we can inject content into from other pages.
-        The curly bracket and percentage are for statements 
-        that control the flow of our template, such
-        as a for-loop, if-statement, or this block element.
-    -->
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading">
+              <h1>Thorin &amp; Company</h1>
+              <span class="subheading">Thorin and is company of dwarves</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Main Content -->
+    <div class="container">{% block content %} {% endblock %}</div>
+
+    <hr />
+
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <p class="copyright text-muted">
+              Copyright &copy; <span id="copyright"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
+
+	<script>
+		$('#copyright').text(new Date().getFullYear());
+	</script>
   </body>
 </html>
