--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css"/>
-    <link rel="stylesheet"href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css"/>
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css"/>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/clean-blog.min.css') }}"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+      type="text/css"
+    />
     <!-- here we added a link to link our css so we use template inheritance 
         like we did before in the previous video. We use url_for() again 
         but this time url_for is going to take 2 arguments.
@@ -19,13 +31,18 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Thorin &amp; Company</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button"
+        <a class="navbar-brand" href="{{ url_for('index') }}"
+          >Thorin &amp; Company</a
+        >
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
           data-toggle="collapse"
           data-target="#navbarResponsive"
           aria-controls="navbarResponsive"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+        >
           Menu
           <i class="fas fa-bars"></i>
         </button>
@@ -49,7 +66,12 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+    <header
+      class="masthead"
+      style="
+        background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png');
+      "
+    >
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -114,8 +136,8 @@
     <!-- Custom scripts for this template -->
     <script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
 
-	<script>
-		$('#copyright').text(new Date().getFullYear());
-	</script>
+    <script>
+      $("#copyright").text(new Date().getFullYear());
+    </script>
   </body>
 </html>
